Header, footer and logo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="styles.css">
 </head>
-<body> <h1>halló</h1>
-    
-</body>
-<footer>
 
-</footer>
+<body>
+    <header>
+        <div class="header">
+            <div class=header__logo__container>
+                <img class="header__logo" src="./assets/ivarmalar.png">
+            </div>
+            <div class="header__navigation">
+                <a href="#about">Um mig</a>
+                <a href="#work">Verkin</a>
+                <a href="#contact">Hafa samband</a>
+            </div>
+        </div>
+    </header>
+    <main>
+        <section id="home">
+            <h1>halló</h1>
+        </section>
+        <section id="about">
+            <h1>halló2</h1>
+        </section>
+        <section id="work">
+            <h1>halló3</h1>
+        </section>
+        <section id="contact">
+            <h1>halló4</h1>
+        </section>
+    </main>
+    <footer>
+        <div class="footer">
+
+        </div>
+    </footer>
+</body>
 </hmtl>
