--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Ivarmalari</title>
+    <title>Ívar málari</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
@@ -21,7 +21,7 @@
     </header>
     <main>
         <section id="home">
-            <h1 style=font-size:110px><b>TRAUSTUR & GÓÐUR MÁLARI</b></h1>
+            <h1 class="home__title"><b>TRAUSTUR & GÓÐUR MÁLARI</b></h1>
         </section>
         <section id="about">
             <div class="about__text">
@@ -46,7 +46,7 @@
         </section>
         <section id="contact">
             <h2>Hafa samband</h2>
-            <div class="container">
+            <div class="contact__container">
                 <form>
                     <label for="fname">Nafn</label>
                     <input type="text" id="fname" name="firstname" placeholder="Nafn..">
